GIG-364 Sticky header overlapped issues fixed
Sticky header overlapped issues fixed in promotion upload page

--- a/themes/bartik/css/maintenance-page.css
+++ b/themes/bartik/css/maintenance-page.css
@@ -9,7 +9,7 @@ body.maintenance-page {
   margin-right: auto;
   min-width: 0;
   min-height: 0;
-  width: 800px;
+  width:1100px;
   border: 1px solid #ddd;
   margin-top: 40px;
 }
